--- a/.github/workflows/complex.yml
+++ b/.github/workflows/complex.yml
@@ -16,6 +16,7 @@ jobs:
     steps:
     - run: date
   depends:
+    needs: [ubuntu, windows, macos]
     runs-on: macos-latest
     steps:
     - run: date
